Minor fixes in the demo presentations.

--- a/reveal-custom/plugins/.plugins.md
+++ b/reveal-custom/plugins/.plugins.md
@@ -1,4 +1,4 @@
-# Third-party plugins
+# Notable third-party Reveal.js plugins 
 - menu — https://github.com/denehyg/reveal.js-menu  — modified to work with latest Reveal.JS key binding API
 - reveald3 — https://github.com/gcalmettes/reveal.js-d3/
 - verticator — https://github.com/Martinomagnifico/reveal.js-verticator
